<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/fragmentHome"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/fragmentFav"
            android:icon="@drawable/ic_favorite_filled"
            android:title="@string/menu_fav"/>
    </group>
    <group>
        <item
            android:id="@+id/rate"
            android:icon="@drawable/ic_baseline_star_rate_24"
            android:title="@string/rating"/>
        <item
            android:id="@+id/share"
            android:icon="@drawable/share"
            android:title="@string/share_app"/>
    </group>



</menu>